# romanbath

./: .env  .env.example  .gitignore  .gitmodules  App.tsx  CHANGELOG.md  DEVELOPMENT_LOG.md  README.md  ROADMAP.md  constants.ts  i18n.ts  index.html  jayne_card.json  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.agent/claude-code-runs/2026-05-30T17-13-31-760Z-cleanup-root-directory/: plan.md  prompt.md  status.json
.agent/workflows/: scene-image-gen.md
.github/workflows/: ci.yml
.omo/run-continuation/: ses_12581f637ffeSG8sdfKWbrGz8D.json
characters/: jayne_card.json  scene_template.txt  suwanning.json
components/: ApiProviderSelector.tsx  CharacterEditor.tsx  CharacterList.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  SettingsPanel.tsx  Toast.tsx
docs/: PLAN_web_channel_ws.md  SOLUTION_B_REMAINING_SPEC.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/bindings/: MigrateNodeDto.ts  MigrateRequest.ts  MigrateResult.ts  SessionTreeDto.ts  SessionTreeNodeDto.ts  SystemInfo.ts
frontend/scripts/: dev-full.mjs
frontend/src/: App.tsx  constants.ts  i18n.ts  index.css  types.ts  vite-env.d.ts
frontend/src/commands/: buildCommands.tsx  types.ts
frontend/src/components/: AffectReadout.tsx  CharacterAvatar.tsx  CharacterEditor.tsx  CharacterList.tsx  CommandPalette.tsx  DialogHost.tsx  ErrorBoundary.tsx  GenerationSettings.tsx  GroupChatManager.tsx  ImageGenModal.tsx  LorebookEditor.tsx  MarkdownRenderer.tsx  MemoryPanel.tsx  MessageBubble.tsx  SettingsPanel.tsx  StudioRail.tsx  Toast.tsx
frontend/src/components/chat/: BranchMiniMap.tsx  ChatHeader.tsx  ChatInput.tsx  GreetingPicker.tsx  ToolCallCard.tsx  branchMiniMapUtils.ts
frontend/src/components/layout/: LeftSidebar.tsx
frontend/src/components/settings/: BackendTab.tsx  CharacterTab.tsx  FormattingTab.tsx  GenerationTab.tsx  InterfaceTab.tsx  LorebookTab.tsx  PersonaTab.tsx  SharedComponents.tsx  StoryTab.tsx  TTSTab.tsx
frontend/src/components/studio/: ContextInspector.tsx  ConversationTree.tsx  MemoryControls.tsx  contextFormat.test.ts  contextFormat.ts
frontend/src/config/: features.ts
frontend/src/hooks/: treeView.test.ts  treeView.ts  useAppLogic.ts  useCharacterImportDrop.ts  useCharacterManagement.ts  useCharacterSearch.ts  useChatGeneration.ts  useChatHelpers.ts  useChatPersistence.ts  useChatPush.ts  useEscapeKey.ts  useMessageActions.ts  useMessageTree.test.ts  useMessageTree.ts  useSpeechRecognition.ts
frontend/src/i18n/: en.ts  index.ts  zh-CN.ts  zh-TW.ts
frontend/src/services/: bookmarkService.ts  branchMetaStore.test.ts  branchMetaStore.ts  chatPersistenceService.test.ts  chatPersistenceService.ts  chatService.test.ts  chatService.ts  chatStorage.ts  dialogService.ts  groupChatService.ts  imageGenService.test.ts  imageGenService.ts  macroService.test.ts  macroService.ts  personaService.ts  promptTemplateService.ts  sillyTavernService.ts  tokenizerService.ts  tombstoneStore.test.ts  tombstoneStore.ts  ttsService.ts  zeroclawService.test.ts  zeroclawService.ts
frontend/src/store/: uiStore.ts
frontend/src/utils/: affect.test.ts  affect.ts  greetings.test.ts  greetings.ts  id.test.ts  id.ts
plugins/sillytavern-cards/: .gitignore
scripts/: gen_images.sh  gen_scene_images.py
services/: bookmarkService.ts  chatPersistenceService.test.ts  chatPersistenceService.ts  chatService.ts  geminiService.ts  groupChatService.ts  personaService.ts  promptTemplateService.ts  sillyTavernService.ts  ttsService.ts
zeroclaw/: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.debian
zeroclaw/.agent/claude-code-runs/2026-05-30T08-31-27-338Z-fix-xai-security-issues/: plan.md  prompt.md  result.md  status.json
zeroclaw/.agent/claude-code-runs/2026-05-30T16-28-18-622Z-sigil-memory-port/: plan.md  prompt.md  result.md  status.json
zeroclaw/.agent/claude-code-runs/2026-05-30T17-00-13-810Z-enrichment-module/: plan.md  prompt.md  result.md  status.json
zeroclaw/.cargo/: config.toml
zeroclaw/benches/: agent_benchmarks.rs
zeroclaw/crates/zeroclaw-affect/: Cargo.toml
zeroclaw/crates/zeroclaw-affect/src/: appraisal.rs  lib.rs  memory.rs  perception.rs  persona.rs  state.rs
zeroclaw/crates/zeroclaw-api/src/: model_provider.rs
zeroclaw/crates/zeroclaw-cards/: Cargo.toml
zeroclaw/crates/zeroclaw-cards/src/: lib.rs  manager.rs  tokenizer.rs  types.rs
zeroclaw/crates/zeroclaw-channels/: Cargo.toml
zeroclaw/crates/zeroclaw-channels/src/: lib.rs
zeroclaw/crates/zeroclaw-config/src/: schema.rs  traits.rs
zeroclaw/crates/zeroclaw-gateway/: Cargo.toml
zeroclaw/crates/zeroclaw-gateway/src/: api.rs  api_characters.rs  api_chat.rs  api_files.rs  api_image_gen.rs  api_sessions.rs  api_tts.rs  chat_prompt.rs  lib.rs  rpc.rs  sse.rs  static_files.rs  ws.rs
zeroclaw/crates/zeroclaw-infra/src/: session_backend.rs  session_sqlite.rs
zeroclaw/crates/zeroclaw-memory/: Cargo.toml
zeroclaw/crates/zeroclaw-memory-sigil/: Cargo.toml
zeroclaw/crates/zeroclaw-memory-sigil/src/: chat_memory.rs  dreaming.rs  enrichment.rs  event_ledger.rs  label_eval.rs  lib.rs  memory_crud.rs  noise.rs  projector.rs  schema.rs  scorer.rs  types.rs
zeroclaw/crates/zeroclaw-memory/src/: hygiene.rs
zeroclaw/crates/zeroclaw-providers/: Cargo.toml
zeroclaw/crates/zeroclaw-providers/src/: anthropic.rs  compatible.rs  factory.rs  lib.rs  openai.rs
zeroclaw/crates/zeroclaw-runtime/: Cargo.toml
zeroclaw/crates/zeroclaw-tools/: Cargo.toml
zeroclaw/crates/zeroclaw-tools/src/: attribution.rs  content_search.rs  hardware_board_info.rs  hardware_memory_map.rs  hardware_memory_read.rs  lib.rs  xai_common.rs  xai_image_gen.rs  xai_tts.rs  xai_video_gen.rs
zeroclaw/examples/: test_xai_tools.rs
zeroclaw/src/: interactive_model.rs  lib.rs  main.rs
zeroclaw/src/heartbeat/: mod.rs
zeroclaw/tests/component/: config_patch_cli.rs  mod.rs  romanbath_compat_api.rs
zeroclaw/tests/support/: helpers.rs
zeroclaw/web/src/lib/: i18n.ts
zeroclaw/web/src/pages/: CharacterChat.tsx
zeroclaw/web/src/router/: lazyPages.tsx  router.tsx
(+12 files in other folders)
