[package]
name = "zeroclaw-affect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Companion empathetic computing module — affect estimation + empathy strategy + stance modulation."
publish = false

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }

[dev-dependencies]
tempfile = "3.26"
