[package]
name = "zeroclaw-cards"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SillyTavern-compatible character card parser (TavernAI V1/V2/V3) and management."
publish = false

[dependencies]
zeroclaw-log.workspace = true
anyhow = "1.0"
base64 = "0.22"
directories = "6.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
tiktoken-rs = "0.11"
